tests/derive/double_borrow_non_sync.stderr
error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
 --> $DIR/double_borrow_non_sync.rs:8:8
  |
8 | fn run(_: NonSync<&NonSyncStruct>, _: NonSync<&mut NonSyncStruct>) {}
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/double_borrow_non_sync.rs:11:8
   |
11 | fn run(_: NonSync<&NonSyncStruct>, _: Unique<NonSync<&mut NonSyncStruct>>) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/double_borrow_non_sync.rs:14:8
   |
14 | fn run(_: Unique<NonSync<&NonSyncStruct>>, _: NonSync<&mut NonSyncStruct>) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/double_borrow_non_sync.rs:17:8
   |
17 | fn run(_: Unique<NonSync<&NonSyncStruct>>, _: Unique<NonSync<&mut NonSyncStruct>>) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
